<resources>
    <string name="app_name">Native</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Fragment Titles -->
    <string name="titleMyProfile">My Profile</string>
    <string name="titleMyContacts">My Contacts</string>
    <string name="titleContact">Contact</string>
    <string name="titleSettings">Settings</string>
    <string name="titleSendFeedback">Send Feedback</string>
    <string name="titlePendingInvites">Pending Invites</string>
    <string name="titleDiscoverUsers">Discover Users</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in_facebook">Facebook</string>
    <string name="sign_in_googleplus">Google+</string>
    <string name="sign_in_linkedin">LinkedIn</string>
    <string name="welcome">Welcome to Native</string>
    <string name="sign_in_with">Sign In With:</string>
    <string name="please_wait">Please wait while we try to sign you in...</string>

    <!-- My Profile and Contact screen -->
    <string name="hint_faculty">Attended Hopkins University 1979-1984</string>
    <string name="hint_employment">Head of Diagnostic @ PPT Hospital</string>
    <string name="hint_interests">Chemistry,  Piano , Guitar, Android, Economy, Football...</string>
    <string name="hint_knowledgeable">Classical Music,  Fitness, Movie Trivia, HTML5, Android, JavaScript...</string>
    <string name="hint_goals">Learn Ionic2, Find a team for basketball...</string>
    <string name="title_activity_chat">ChatActivity</string>

    <!-- Chat Activity -->
    <string name="typeMessage">Type to compose</string>
    <string name="dismiss">Dismiss</string>
    <string name="accept">Accept</string>


    <!-- Discover Users Activity -->
    <string name="title_activity_discover_users_slider">Discover Users</string>

    <!-- Preferences Activity -->
    <string name="pref_general_settings">General</string>
    <string name="pref_account_settings">Account</string>
    <string name="pref_discoverable">Make me discoverable by others</string>
    <string name="pref_notify_messages">Notifications for Messages</string>
    <string name="pref_notify_invites">Notifications for Invites</string>
    <string name="pref_log_out_button">pref_log_out_button</string>
</resources>
