<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/titleMyProfile" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/titleMyContacts" />
        <item
            android:id="@+id/nav_pending_invites"
            android:icon="@drawable/ic_group_add_black_24dp"
            android:title="@string/titlePendingInvites" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/titleSettings" />
        <item
            android:id="@+id/nav_send_feedback"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/titleSendFeedback" />
    </group>

</menu>
